Fix #1192 use Charset instead of String
Use Charset type instead of String charset names where appropriate in
the new Java 11 APIs which accept the more strongly typed Charset type.